chosen jvm options for elastic stack log generation.